--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mac Book Pro</title>
-    <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <!-- CSS -->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
     <div class="container">
@@ -21,10 +21,24 @@
             </p>
 
             <!-- memory -->
-           
+          
+            <div class="grid g-3">
+                <h3>Memory</h3>
+                <div class="grid">
+                    <div class="g-col-6">
+                        <button>8GB unified memory</button>
+                    </div>
+                    <div class="g-col-6">
+                        <button>16GB unified memory</button>
+                    </div>
+                </div>
+              </div>
 
           </div>
         </div>
     </div>
 </body>
-</html>
+</html> 
+
+
+
