--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="container">
                 <div class="row">
                   <div class="col fw-bold">Total Price</div>
-                  <div class="col fw-bold">$1299</div> 
+                  <div class="col fw-bold">$<span id="total-price">1299</span></div> 
                 </div>
               </div>
               <hr class="w-75">
